tests/ui/const-generics/min_const_generics/self-ty-in-const-1.stderr
error: generic parameters may not be used in const operations
  --> $DIR/self-ty-in-const-1.rs:2:41
   |
LL |     fn t1() -> [u8; std::mem::size_of::<Self>()];
   |                                         ^^^^ cannot perform const operation using `Self`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/self-ty-in-const-1.rs:12:41
   |
LL |     fn t3() -> [u8; std::mem::size_of::<Self>()] {}
   |                                         ^^^^
   |
note: not a concrete type
  --> $DIR/self-ty-in-const-1.rs:11:9
   |
LL | impl<T> Bar<T> {
   |         ^^^^^^

error: aborting due to 2 previous errors

